Fix: addfont-display to prevent flash of invisible text
to ensure text remains visible during webfont load

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -46,11 +46,13 @@
 @font-face {
 	font-family: 'ReemKufiInk';
 	src: url('/fonts/ReemKufiInk-Regular.ttf');
+	font-display: swap;
 }
 
 @font-face {
 	font-family: 'Inter';
 	src: url('/fonts/Inter-Regular.ttf');
+	font-display: swap;
 }
 
 body {
@@ -70,11 +72,11 @@ nav ul {
 	padding: 0;
 }
 
-.content>section>*+* {
+.content > section > * + * {
 	margin-top: 1.25rem;
 }
 
-.content>section> :first-child {
+.content > section > :first-child {
 	margin-top: 0;
 }
 
@@ -152,50 +154,50 @@ a {
 	gap: 0.5rem;
 }
 
-article>section :is(ul, ol)>*+* {
+article > section :is(ul, ol) > * + * {
 	margin-top: 0.75rem;
 }
 
-article>section nav :is(ul, ol)>*+* {
+article > section nav :is(ul, ol) > * + * {
 	margin-top: inherit;
 }
 
-article>section li> :is(p, pre, blockquote):not(:first-child) {
+article > section li > :is(p, pre, blockquote):not(:first-child) {
 	margin-top: 1rem;
 }
 
-article>section :is(ul, ol) {
+article > section :is(ul, ol) {
 	padding-left: 1em;
 }
 
-article>section nav :is(ul, ol) {
+article > section nav :is(ul, ol) {
 	padding-left: inherit;
 }
 
-article>section nav {
+article > section nav {
 	margin-top: 1rem;
 	margin-bottom: 2rem;
 }
 
-article>section ::marker {
+article > section ::marker {
 	font-weight: bold;
 	color: var(--theme-text-light);
 }
 
-article>section iframe {
+article > section iframe {
 	width: 100%;
 	height: auto;
 	aspect-ratio: 16 / 9;
 }
 
-a>code {
+a > code {
 	position: relative;
 	color: var(--theme-text-accent);
 	background: transparent;
 	text-underline-offset: var(--padding-block);
 }
 
-a>code::before {
+a > code::before {
 	content: '';
 	position: absolute;
 	top: 0;
@@ -235,11 +237,11 @@ code {
 	word-break: break-word;
 }
 
-pre.astro-code>code {
+pre.astro-code > code {
 	all: unset;
 }
 
-pre>code {
+pre > code {
 	font-size: 1em;
 }
 
